logs/dag_id=sales/run_id=scheduled__2022-06-16T00:00:00+00:00/task_id=load_fato/attempt=1.log
[2022-06-17 20:15:40,198] {taskinstance.py:1160} INFO - Dependencies all met for <TaskInstance: sales.load_fato scheduled__2022-06-16T00:00:00+00:00 [queued]>
[2022-06-17 20:15:40,219] {taskinstance.py:1160} INFO - Dependencies all met for <TaskInstance: sales.load_fato scheduled__2022-06-16T00:00:00+00:00 [queued]>
[2022-06-17 20:15:40,220] {taskinstance.py:1357} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 20:15:40,220] {taskinstance.py:1358} INFO - Starting attempt 1 of 1
[2022-06-17 20:15:40,220] {taskinstance.py:1359} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 20:15:40,241] {taskinstance.py:1378} INFO - Executing <Task(PythonOperator): load_fato> on 2022-06-16 00:00:00+00:00
[2022-06-17 20:15:40,249] {standard_task_runner.py:52} INFO - Started process 178564 to run task
[2022-06-17 20:15:40,255] {standard_task_runner.py:79} INFO - Running: ['airflow', 'tasks', 'run', 'sales', 'load_fato', 'scheduled__2022-06-16T00:00:00+00:00', '--job-id', '1366', '--raw', '--subdir', 'DAGS_FOLDER/dag copy.py', '--cfg-path', '/tmp/tmpvyczwkc4', '--error-file', '/tmp/tmp7bb4bz1w']
[2022-06-17 20:15:40,256] {standard_task_runner.py:80} INFO - Job 1366: Subtask load_fato
[2022-06-17 20:15:40,337] {task_command.py:370} INFO - Running <TaskInstance: sales.load_fato scheduled__2022-06-16T00:00:00+00:00 [running]> on host uiliam-Vostro-15-3515
[2022-06-17 20:15:40,452] {taskinstance.py:1570} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=airflow
AIRFLOW_CTX_DAG_ID=sales
AIRFLOW_CTX_TASK_ID=load_fato
AIRFLOW_CTX_EXECUTION_DATE=2022-06-16T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-06-16T00:00:00+00:00
[2022-06-17 20:15:40,470] {taskinstance.py:1890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/base.py", line 1705, in _execute_context
    self.dialect.do_execute(
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/default.py", line 716, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "c"
LINE 1: ...d, f.priceeach, f.buyprice from Stg_Fato f        c.id_custo...
                                                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/uiliam/airflow/dags/sales.py", line 112, in load_Fato
    df_ft = pd.read_sql_query("select f.quantityordered, f.priceeach, f.buyprice from Stg_Fato f\
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/pandas/io/sql.py", line 399, in read_sql_query
    return pandas_sql.read_query(
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/pandas/io/sql.py", line 1557, in read_query
    result = self.execute(*args)
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/pandas/io/sql.py", line 1402, in execute
    return self.connectable.execution_options().execute(*args, **kwargs)
  File "<string>", line 2, in execute
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/util/deprecations.py", line 390, in warned
    return fn(*args, **kwargs)
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/base.py", line 3037, in execute
    return connection.execute(statement, *multiparams, **params)
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/base.py", line 1185, in execute
    return self._exec_driver_sql(
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/base.py", line 1484, in _exec_driver_sql
    ret = self._execute_context(
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/base.py", line 1748, in _execute_context
    self._handle_dbapi_exception(
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/base.py", line 1929, in _handle_dbapi_exception
    util.raise_(
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/base.py", line 1705, in _execute_context
    self.dialect.do_execute(
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/sqlalchemy/engine/default.py", line 716, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "c"
LINE 1: ...d, f.priceeach, f.buyprice from Stg_Fato f        c.id_custo...
                                                             ^

[SQL: select f.quantityordered, f.priceeach, f.buyprice from Stg_Fato f        c.id_customers, p.id_products, t.id_time, e.id_emp         left join DM_Customers c        on  c.customername = f.customername        left join DM_Products p        on   p.productname = f.productname          left join DM_Time t        on t.orderdate = f.orderdate and t.requireddate = f.requireddate        left join DM_Emp e        on   e.lastname = f.lastname]
(Background on this error at: http://sqlalche.me/e/14/f405)
[2022-06-17 20:15:40,489] {taskinstance.py:1396} INFO - Marking task as FAILED. dag_id=sales, task_id=load_fato, execution_date=20220616T000000, start_date=20220617T231540, end_date=20220617T231540
[2022-06-17 20:15:40,509] {standard_task_runner.py:92} ERROR - Failed to execute job 1366 for task load_fato ((psycopg2.errors.SyntaxError) syntax error at or near "c"
LINE 1: ...d, f.priceeach, f.buyprice from Stg_Fato f        c.id_custo...
                                                             ^

[SQL: select f.quantityordered, f.priceeach, f.buyprice from Stg_Fato f        c.id_customers, p.id_products, t.id_time, e.id_emp         left join DM_Customers c        on  c.customername = f.customername        left join DM_Products p        on   p.productname = f.productname          left join DM_Time t        on t.orderdate = f.orderdate and t.requireddate = f.requireddate        left join DM_Emp e        on   e.lastname = f.lastname]
(Background on this error at: http://sqlalche.me/e/14/f405); 178564)
[2022-06-17 20:15:40,548] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-17 20:15:40,602] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
